tests/fixtures/invalid/list_in_str.py
# Cannot use 'in' with List[int] and Str
x: bool = [1, 2, 3] in "hello"
